--- a/ueventd.geehrc.rc
+++ b/ueventd.geehrc.rc
@@ -36,11 +36,13 @@
 /dev/msm_camera/*         0660   system     camera
 /dev/gemini*              0660   system     camera
 /dev/msm_dsps             0660   system     system
-/dev/bcm2079x-i2c         0660   nfc        nfc
 /dev/qseecom              0660   system     drmrpc
 /dev/mdm                  0660   system     radio
 /dev/ttyUSB0              0660   system     system
-/dev/block/mmcblk0p8      0660   system     system
-/dev/block/mmcblk0p9      0660   system     system
+/dev/block/mmcblk0p12     0660   system     system
+/dev/block/mmcblk0p13     0660   system     system
+/dev/block/mmcblk0p14     0660   system     system
+/dev/block/mmcblk0p18     0660   root       system
+/dev/pn544                0660   nfc        nfc
 /dev/ks_hsic_bridge       0660   system     system
 /dev/efs_hsic_bridge      0660   system     system
