Use my init.post.boot

--- a/init.geehrc.rc
+++ b/init.geehrc.rc
@@ -371,6 +371,12 @@ service thermald /system/bin/thermald
     class main
     group radio system
 
+service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
+    class late_start
+    user root
+    disabled
+    oneshot
+
 service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
     class main
     user root
@@ -421,6 +427,9 @@ service fetch-swv /system/bin/fetch-swv
 # inform hdmi driver that boot completed
 on property:dev.bootcomplete=1
     write /sys/devices/virtual/graphics/fb1/hdmi_boot_completed 1
+
+on property:sys.boot_completed=1
+    start qcom-post-boot
 
 # external block api
 on property:sys.hdmi.block=block
