--- a/init.geehrc.rc
+++ b/init.geehrc.rc
@@ -370,6 +370,7 @@ service charger /sbin/healthd -c
 service thermald /system/bin/thermald
     class main
     group radio system
+    disabled
 
 service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
     class late_start
@@ -381,6 +382,7 @@ service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
     class main
     user root
     group root system
+    disabled
 
 service qcamerasvr /system/bin/mm-qcamera-daemon
     class late_start
