* Move binaries from /system/etc to /system/bin. That's the proper place for binaries, and avoids having to preface each service entry with /system/bin/sh
* Drop seclabel statements and rely on automatic domain transitions.

https://android.googlesource.com/device/asus/flo/+/fd5858343999e25493d1d1f5240f7413f63f794e%5E%21/#F1

--- a/init.geehrc.rc
+++ b/init.geehrc.rc
@@ -257,11 +257,10 @@ service rmt_storage /system/bin/rmt_storage
     user root
     group system
 
-service hciattach /system/bin/sh /system/etc/init.geehrc.bt.sh
+service hciattach /system/bin/init.geehrc.bt.sh
     class late_start
     user bluetooth
     group qcom_oncrpc bluetooth net_bt_admin system
-    seclabel u:r:bluetooth_loader:s0
     disabled
     oneshot
 
@@ -369,7 +368,7 @@ service thermald /system/bin/thermald
     group radio system
     disabled
 
-service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
+service qcom-post-boot /system/bin/init.qcom.post_boot.sh
     class late_start
     user root
     disabled
@@ -386,11 +385,10 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
     user camera
     group camera system inet input
 
-service wcnss_init /system/bin/sh /system/etc/init.geehrc.wifi.sh
+service wcnss_init /system/bin/init.geehrc.wifi.sh
     class late_start
     user system
     group system wifi
-    seclabel u:r:conn_init:s0
     oneshot
 
 service bdAddrLoader /system/bin/bdAddrLoader -f /persist/bluetooth/.bdaddr -h -x
