--- a/audio_effects.conf
+++ b/audio_effects.conf
@@ -6,11 +6,14 @@
 #        }
 #    }
 libraries {
+  v4a_fx {
+    path /system/lib/soundfx/libv4a_fx_ics.so
+  }
   bundle {
-    path /system/lib/soundfx/libbundlewrapper.so
+    path /system/lib/soundfx/libv4a_fx_ics.so
   }
   reverb {
-    path /system/lib/soundfx/libreverbwrapper.so
+    path /system/lib/soundfx/libv4a_fx_ics.so
   }
   visualizer {
     path /system/lib/soundfx/libvisualizer.so
@@ -19,7 +22,7 @@ libraries {
     path /system/lib/soundfx/libqcomvoiceprocessing.so
   }
   downmix {
-    path /system/lib/soundfx/libdownmix.so
+    path /system/lib/soundfx/libv4a_fx_ics.so
   }
   loudness_enhancer {
     path /system/lib/soundfx/libldnhncr.so
@@ -42,45 +45,49 @@ libraries {
 #    }
 
 effects {
+  v4a_standard_fx {
+    library v4a_fx
+    uuid 41d3c987-e6cf-11e3-a88a-11aba5d5c51b
+  }
   bassboost {
-    library bundle
-    uuid 8631f300-72e2-11df-b57e-0002a5d5c51b
+    library v4a_fx
+    uuid 41d3c987-e6cf-11e3-a88a-11aba5d5c51b
   }
   virtualizer {
-    library bundle
-    uuid 1d4033c0-8557-11df-9f2d-0002a5d5c51b
+    library v4a_fx
+    uuid 41d3c987-e6cf-11e3-a88a-11aba5d5c51b
   }
   equalizer {
-    library bundle
-    uuid ce772f20-847d-11df-bb17-0002a5d5c51b
+    library v4a_fx
+    uuid 41d3c987-e6cf-11e3-a88a-11aba5d5c51b
   }
   volume {
-    library bundle
-    uuid 119341a0-8469-11df-81f9-0002a5d5c51b
+    library v4a_fx
+    uuid 41d3c987-e6cf-11e3-a88a-11aba5d5c51b
   }
   reverb_env_aux {
-    library reverb
-    uuid 4a387fc0-8ab3-11df-8bad-0002a5d5c51b
+    library v4a_fx
+    uuid 41d3c987-e6cf-11e3-a88a-11aba5d5c51b
   }
   reverb_env_ins {
-    library reverb
-    uuid c7a511a0-a3bb-11df-860e-0002a5d5c51b
+    library v4a_fx
+    uuid 41d3c987-e6cf-11e3-a88a-11aba5d5c51b
   }
   reverb_pre_aux {
-    library reverb
-    uuid f29a1400-a3bb-11df-8ddc-0002a5d5c51b
+    library v4a_fx
+    uuid 41d3c987-e6cf-11e3-a88a-11aba5d5c51b
   }
   reverb_pre_ins {
-    library reverb
-    uuid 172cdf00-a3bc-11df-a72f-0002a5d5c51b
+    library v4a_fx
+    uuid 41d3c987-e6cf-11e3-a88a-11aba5d5c51b
   }
   visualizer {
     library visualizer
     uuid d069d9e0-8329-11df-9168-0002a5d5c51b
   }
   downmix {
-    library downmix
-    uuid 93f04452-e4fe-41cc-91f9-e475b6d1d69f
+    library v4a_fx
+    uuid 41d3c987-e6cf-11e3-a88a-11aba5d5c51b
   }
   aec {
     library qcom_pre_processing
